--- a/Project.toml
+++ b/Project.toml
@@ -1,2 +1,10 @@
 [deps]
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
+Collatz = "7f1893b8-0685-48be-97e1-7ab8cdba95c7"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
+PProf = "e4faabce-9ead-11e9-39d9-4379958e3056"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+Transducers = "28d57a85-8fef-5791-bfe6-a80928e7c999"
