--- a/examples/JuliaFractal/Project.toml
+++ b/examples/JuliaFractal/Project.toml
@@ -7,4 +7,5 @@ version = "0.1.0"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 Observables = "510215fc-4207-5dde-b226-833fc4488ee2"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Transducers = "28d57a85-8fef-5791-bfe6-a80928e7c999"
