--- a/Project.toml
+++ b/Project.toml
@@ -10,3 +10,4 @@ PProf = "e4faabce-9ead-11e9-39d9-4379958e3056"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Transducers = "28d57a85-8fef-5791-bfe6-a80928e7c999"
+oneAPI = "8f75cd03-7ff8-4ecb-9b8f-daf728133b1b"
