--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,9 @@ CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 Collatz = "7f1893b8-0685-48be-97e1-7ab8cdba95c7"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 JuliaFractal = "326d93a7-e397-4fd2-a539-a941ebed2d3e"
+KernelAbstractions = "63c18a36-062a-441e-b654-da1e3ab1ce7c"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 PProf = "e4faabce-9ead-11e9-39d9-4379958e3056"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
