working on stencils

--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 
 [deps]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
+BestieTemplate = "e5d671a7-4186-4f1a-bf88-c19b630da94f"
 ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
 ColorTypes = "3da002f7-5984-5a60-b8a6-cbb66c0b333f"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
@@ -18,9 +19,12 @@ Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 Observables = "510215fc-4207-5dde-b226-833fc4488ee2"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+Transducers = "28d57a85-8fef-5791-bfe6-a80928e7c999"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
+BestieTemplate = "0.14.1"
 ColorSchemes = "3.28.0"
 ColorTypes = "0.11.5"
 ImageIO = "0.6.9"
@@ -29,3 +33,5 @@ LinearAlgebra = "1.11.0"
 Makie = "0.21.18"
 Observables = "0.5.5"
 Random = "1.11.0"
+StaticArrays = "1.9.10"
+Transducers = "0.4.84"
