--- a/Project.toml
+++ b/Project.toml
@@ -8,9 +8,12 @@ BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 BestieTemplate = "e5d671a7-4186-4f1a-bf88-c19b630da94f"
 ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
 ColorTypes = "3da002f7-5984-5a60-b8a6-cbb66c0b333f"
+Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
+GraphvizDotLang = "6039e64d-d8b8-4c93-8e43-7efd2f757352"
 ImageIO = "82e4d734-157c-48bb-816b-45c225c6df19"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
@@ -27,6 +30,9 @@ Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 BestieTemplate = "0.14.1"
 ColorSchemes = "3.28.0"
 ColorTypes = "0.11.5"
+Colors = "0.13.0"
+FileIO = "1.16.6"
+GraphvizDotLang = "0.2.1"
 ImageIO = "0.6.9"
 Images = "0.26.1"
 LinearAlgebra = "1.11.0"
