--- a/Project.toml
+++ b/Project.toml
@@ -19,7 +19,9 @@ Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
+MethodOfLines = "94925ecb-adb7-4558-8ed8-f975c56a0bf4"
 Observables = "510215fc-4207-5dde-b226-833fc4488ee2"
+ProgressLogging = "33c8b6b6-d38a-422a-b730-caa89a2f386c"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
@@ -37,7 +39,9 @@ ImageIO = "0.6.9"
 Images = "0.26.1"
 LinearAlgebra = "1.11.0"
 Makie = "0.21.18"
+MethodOfLines = "0.11.7"
 Observables = "0.5.5"
+ProgressLogging = "0.1.4"
 Random = "1.11.0"
 StaticArrays = "1.9.10"
 Transducers = "0.4.84"
