--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
 ColorTypes = "3da002f7-5984-5a60-b8a6-cbb66c0b333f"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+DomainSets = "5b8099bc-c8ec-5219-889f-1d9e522a28bf"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
@@ -18,9 +19,14 @@ ImageIO = "82e4d734-157c-48bb-816b-45c225c6df19"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 MethodOfLines = "94925ecb-adb7-4558-8ed8-f975c56a0bf4"
+ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 Observables = "510215fc-4207-5dde-b226-833fc4488ee2"
+OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
+OhMyREPL = "5fb14364-9ced-5910-84b2-373655c76a03"
+OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 ProgressLogging = "33c8b6b6-d38a-422a-b730-caa89a2f386c"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
@@ -33,14 +39,20 @@ BestieTemplate = "0.14.1"
 ColorSchemes = "3.28.0"
 ColorTypes = "0.11.5"
 Colors = "0.13.0"
+DomainSets = "0.7.15"
 FileIO = "1.16.6"
 GraphvizDotLang = "0.2.1"
 ImageIO = "0.6.9"
 Images = "0.26.1"
 LinearAlgebra = "1.11.0"
+MacroTools = "0.5.15"
 Makie = "0.21.18"
 MethodOfLines = "0.11.7"
+ModelingToolkit = "9.62.0"
 Observables = "0.5.5"
+OffsetArrays = "1.15.0"
+OhMyREPL = "0.5.28"
+OrdinaryDiffEq = "6.90.1"
 ProgressLogging = "0.1.4"
 Random = "1.11.0"
 StaticArrays = "1.9.10"
