update episode on solar system: simplifying code

--- a/entangled.toml
+++ b/entangled.toml
@@ -19,3 +19,8 @@ name = "Output"
 identifiers = ["output"]
 comment = { open = "#" }
 
+[[languages]]
+name = "Shell"
+identifiers = ["shell"]
+comment = { open = "#" }
+
