--- a/.entangled/tasks.json
+++ b/.entangled/tasks.json
@@ -3,6 +3,30 @@
     {
       "description": null,
       "creates": [
+        "episodes/fig/logistic-map-orbits.png"
+      ],
+      "requires": [],
+      "runner": "julia",
+      "stdout": null,
+      "stdin": null,
+      "script": "#| classes: [\"task\"]\n#| collect: figures\n#| creates: episodes/fig/logistic-map-orbits.png\n\nmodule Script\nusing IterTools\nusing .Iterators: take\nusing GLMakie\n\nfunction main()\n    logistic_map(r) = n -> r * n * (1 - n)\n    fig = Figure(size=(1024, 512))\n    for (i, r) in enumerate(LinRange(2.6, 4.0, 8))\n        ax = Makie.Axis(fig[div(i-1, 4)+1, mod1(i, 4)], title=\"r=$$r\")\n        pts = take(iterated(logistic_map(r), 0.001), 50) |> collect\n        lines!(ax, pts, alpha=0.5)\n        plot!(ax, pts, markersize=5.0)\n    end\n    save(\"episodes/fig/logistic-map-orbits.png\", fig)\nend\nend\n\nScript.main()",
+      "path": null
+    },
+    {
+      "description": null,
+      "creates": [
+        "episodes/fig/bifurcation-diagram.png"
+      ],
+      "requires": [],
+      "runner": "julia",
+      "stdout": null,
+      "stdin": null,
+      "script": "#| classes: [\"task\"]\n#| collect: figures\n#| creates: episodes/fig/bifurcation-diagram.png\nmodule Script\nusing GLMakie\nusing IterTools\nusing .Iterators: take\n\n#| id: logistic-map\nlogistic_map(r) = n -> r * n * (1 - n)\n#| id: logistic-map\nfunction logistic_map_points(r::Real, n_skip)\n    make_point(x) = Point2f(r, x)\n    x0 = nth(iterated(logistic_map(r), 0.5), n_skip)\n    Iterators.map(make_point, iterated(logistic_map(r), x0))\nend\n#| id: logistic-map\nfunction logistic_map_points(rs::AbstractVector{R}, n_skip, n_take) where {R <: Real}\n    Iterators.flatten(Iterators.take(logistic_map_points(r, n_skip), n_take) for r in rs) \nend\n#| id: logistic-map\nfunction plot_bifurcation_diagram()\n    pts = logistic_map_points(LinRange(2.6, 4.0, 10000), 1000, 10000) |> collect\n    fig = Figure(size=(1024, 768))\n    ax = Makie.Axis(fig[1,1], limits=((2.6, 4.0), nothing), xlabel=\"r\", ylabel=\"N\")\n    datashader!(ax, pts, async=false, colormap=:deep)\n    fig\nend\n\nplot_bifurcation_diagram()\n\nfunction main()\n    fig = plot_bifurcation_diagram()\n    save(\"episodes/fig/bifurcation-diagram.png\", fig)\nend\nend\n\nScript.main()",
+      "path": null
+    },
+    {
+      "description": null,
+      "creates": [
         "episodes/fig/getting-started-makie.png"
       ],
       "requires": [],
@@ -15,46 +39,35 @@
     {
       "description": null,
       "creates": [
-        "episodes/fig/random-orbits.png"
+        "episodes/fig/two-body-drift.svg"
       ],
       "requires": [],
       "runner": "julia",
       "stdout": null,
       "stdin": null,
-      "script": "#| classes: [\"task\"]\n#| creates: episodes/fig/random-orbits.png\n#| collect: figures\n\nmodule Script\n\nusing Unitful\nusing GLMakie\nusing DataFrames\nusing Random\nusing EfficientJulia.Gravity: random_orbits\n\nfunction plot_orbits!(ax, orbits::DataFrame)\n    for colname in names(orbits)[2:end]\n        scatter!(ax, [orbits[1,colname] / u\"m\"])\n        lines!(ax, orbits[!,colname] / u\"m\")\n    end\nend\n\nfunction main()\n    Random.seed!(0)\n    orbs1 = random_orbits(2, 1e6u\"kg\")\n    Random.seed!(15)\n    orbs2 = random_orbits(3, 1e6u\"kg\")\n\n    fig = Figure(size=(1024, 600))\n    ax1 = Axis3(fig[1,1], azimuth=\u03c0/2+0.1, elevation=0.1\u03c0, title=\"two particles\")\n    ax2 = Axis3(fig[1,2], azimuth=\u03c0/3, title=\"three particles\")\n\n    plot_orbits!(ax1, orbs1)\n    plot_orbits!(ax2, orbs2)\n\n    save(\"episodes/fig/random-orbits.png\", fig)\n    fig\nend\n\nend\n\nScript.main()",
-      "path": null
+      "script": null,
+      "path": "scripts/plot-two-body-drift.jl"
     },
     {
       "description": null,
       "creates": [
-        "episodes/fig/logistic-map-orbits.png"
+        "episodes/fig/random-orbits.svg"
       ],
       "requires": [],
       "runner": "julia",
       "stdout": null,
       "stdin": null,
-      "script": "#| classes: [\"task\"]\n#| collect: figures\n#| creates: episodes/fig/logistic-map-orbits.png\n\nmodule Script\nusing IterTools\nusing .Iterators: take\nusing GLMakie\n\nfunction main()\n    logistic_map(r) = n -> r * n * (1 - n)\n    fig = Figure(size=(1024, 512))\n    for (i, r) in enumerate(LinRange(2.6, 4.0, 8))\n        ax = Axis(fig[div(i-1, 4)+1, mod1(i, 4)], title=\"r=$$r\")\n        pts = take(iterated(logistic_map(r), 0.001), 50) |> collect\n        lines!(ax, pts, alpha=0.5)\n        plot!(ax, pts, markersize=5.0)\n    end\n    save(\"episodes/fig/logistic-map-orbits.png\", fig)\nend\nend\n\nScript.main()",
-      "path": null
-    },
-    {
-      "description": null,
-      "creates": [
-        "episodes/fig/bifurcation-diagram.png"
-      ],
-      "requires": [],
-      "runner": "julia",
-      "stdout": null,
-      "stdin": null,
-      "script": "#| classes: [\"task\"]\n#| collect: figures\n#| creates: episodes/fig/bifurcation-diagram.png\nmodule Script\nusing GLMakie\nusing IterTools\nusing .Iterators: take\n\n#| id: logistic-map\nlogistic_map(r) = n -> r * n * (1 - n)\n#| id: logistic-map\nfunction logistic_map_points(r::Real, n_skip)\n    make_point(x) = Point2f(r, x)\n    x0 = nth(iterated(logistic_map(r), 0.5), n_skip)\n    Iterators.map(make_point, iterated(logistic_map(r), x0))\nend\n#| id: logistic-map\nfunction logistic_map_points(rs::AbstractVector{R}, n_skip, n_take) where {R <: Real}\n    Iterators.flatten(Iterators.take(logistic_map_points(r, n_skip), n_take) for r in rs) \nend\n#| id: logistic-map\nfunction plot_bifurcation_diagram()\n  pts = logistic_map_points(LinRange(2.6, 4.0, 10000), 1000, 10000) |> collect\n\tfig = Figure(size=(1024, 768))\n\tax = Makie.Axis(fig[1,1], limits=((2.6, 4.0), nothing), xlabel=\"r\", ylabel=\"N\")\n\tdatashader!(ax, pts, async=false, colormap=:deep)\n\tfig\nend\n\nplot_bifurcation_diagram()\n\nfunction main()\n    fig = plot_bifurcation_diagram()\n    save(\"episodes/fig/bifurcation-diagram.png\", fig)\nend\nend\n\nScript.main()",
-      "path": null
+      "script": null,
+      "path": "scripts/plot-two-body-still.jl"
     },
     {
       "name": "figures",
       "requires": [
-        "episodes/fig/getting-started-makie.png",
-        "episodes/fig/random-orbits.png",
         "episodes/fig/logistic-map-orbits.png",
-        "episodes/fig/bifurcation-diagram.png"
+        "episodes/fig/bifurcation-diagram.png",
+        "episodes/fig/getting-started-makie.png",
+        "episodes/fig/two-body-drift.svg",
+        "episodes/fig/random-orbits.svg"
       ]
     }
   ]
